@@ -1,11 +1,13 @@
+import gradle.GradlePluginVariant
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
-import com.github.jengelman.gradle.plugins.shadow.transformers.DontIncludeResourceTransformer
-import org.jetbrains.kotlin.pill.PillExtension
+import org.jetbrains.kotlin.build.androidsdkprovisioner.ProvisioningType
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
     id("gradle-plugin-common-configuration")
-    id("jps-compatible")
-    id("org.jetbrains.kotlinx.binary-compatibility-validator")
+    id("kotlin-git.gradle-build-conventions.binary-compatibility-extended")
+    id("android-sdk-provisioner")
+    id("asm-deprecating-transformer")
 }
 
 repositories {
@@ -14,35 +16,97 @@ repositories {
     gradlePluginPortal()
 }
 
-pill {
-    variant = PillExtension.Variant.FULL
-}
-
 kotlin {
     compilerOptions {
         optIn.addAll(
             listOf(
                 "kotlin.RequiresOptIn",
-                "org.jetbrains.kotlin.gradle.plugin.mpp.pm20.AdvancedKotlinGradlePluginApi",
                 "org.jetbrains.kotlin.gradle.InternalKotlinGradlePluginApi",
                 "org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi",
                 "org.jetbrains.kotlin.gradle.ExternalKotlinTargetApi",
                 "org.jetbrains.kotlin.compiler.plugin.ExperimentalCompilerApi",
+                "org.jetbrains.kotlin.gradle.DeprecatedTargetPresetApi",
+                "org.jetbrains.kotlin.buildtools.api.ExperimentalBuildToolsApi",
+                "org.jetbrains.kotlin.gradle.ComposeKotlinGradlePluginApi",
+                "org.jetbrains.kotlin.gradle.swiftexport.ExperimentalSwiftExportDsl"
             )
         )
     }
+
+    tasks.named<Test>("test") {
+        useJUnit {
+            exclude("**/*LincheckTest.class")
+        }
+    }
+
+    tasks.register<Test>("lincheckTest") {
+        javaLauncher.set(project.getToolchainLauncherFor(JdkMajorVersion.JDK_11_0))
+
+        jvmArgs(
+            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-exports", "java.base/sun.security.action=ALL-UNNAMED"
+        )
+        filter { include("**/*LincheckTest.class") }
+    }
 }
 
-apiValidation {
-    publicMarkers.add("org.jetbrains.kotlin.gradle.ExternalKotlinTargetApi")
-    nonPublicMarkers.add("org.jetbrains.kotlin.gradle.InternalKotlinGradlePluginApi")
-    additionalSourceSets.add("common")
+binaryCompatibilityValidator {
+    targets.configureEach {
+        ignoredPackages.addAll(
+            "org.jetbrains.kotlin.gradle.internal",
+            "org.jetbrains.kotlin.gradle.plugin.internal",
+            "org.jetbrains.kotlin.gradle.scripting.internal",
+            "org.jetbrains.kotlin.gradle.targets.js.internal",
+            "org.jetbrains.kotlin.gradle.targets.native.internal",
+            "org.jetbrains.kotlin.gradle.tasks.internal",
+            "org.jetbrains.kotlin.gradle.testing.internal",
+        )
+        ignoredMarkers.add("org.jetbrains.kotlin.gradle.InternalKotlinGradlePluginApi")
+
+        inputClasses.from(project.sourceSets.main.map { it.output.classesDirs })
+        inputClasses.from(project.sourceSets.common.map { it.output.classesDirs })
+    }
+
+    val externalApiMarkers = setOf(
+        "org.jetbrains.kotlin.gradle.ExternalKotlinTargetApi",
+        "org.jetbrains.kotlin.gradle.ComposeKotlinGradlePluginApi",
+        "org.jetbrains.kotlin.gradle.dsl.KotlinGradlePluginPublicDsl",
+    )
+
+    targets.register("all") {
+        // Dump of all public API, intended for regular usage in build scripts.
+        ignoredMarkers.addAll(externalApiMarkers)
+    }
+
+    targets.register("external") {
+        // Dump of all external API, intended for use in official JetBrains plugins like Compose.
+        publicMarkers.addAll(externalApiMarkers)
+    }
 }
+
+val unpublishedCompilerRuntimeDependencies = listOf( // TODO: remove in KT-70247
+    ":compiler:cli", // for MessageRenderer, related to MessageCollector usage
+    ":compiler:cli-common", // for compiler arguments setup, for logging via MessageCollector, CompilerSystemProperties, ExitCode
+    ":compiler:compiler.version", // for user projects buildscripts, `loadCompilerVersion`
+    ":compiler:config", // for CommonCompilerArguments initialization
+    ":compiler:config.jvm", // for K2JVMCompilerArguments initialization
+    ":compiler:ir.tree", // for PartialLinkageMode (K/N)
+    ":compiler:plugin-api", // `ExperimentalCompilerApi`
+    ":compiler:util", // for CommonCompilerArguments initialization, K/N
+    ":core:compiler.common", // for FUS statistics parsing all the compiler arguments
+    ":core:compiler.common.jvm", // for FUS statistics parsing all the compiler arguments
+    ":core:descriptors", // for `fromUIntToLong`
+    ":core:util.runtime", // for stdlib extensions
+    ":kotlin-build-common", // for incremental compilation setup
+    ":wasm:wasm.config", // for k/js task
+)
 
 dependencies {
     commonApi(platform(project(":kotlin-gradle-plugins-bom")))
     commonApi(project(":kotlin-gradle-plugin-api"))
     commonApi(project(":kotlin-gradle-plugin-model"))
+    commonApi(project(":libraries:tools:gradle:fus-statistics-gradle-plugin"))
 
     // Following two dependencies is a workaround for IDEA import to pick-up them correctly
     commonCompileOnly(project(":kotlin-gradle-plugin-api")) {
@@ -56,82 +120,77 @@ dependencies {
         }
     }
 
-    commonCompileOnly(project(":compiler:incremental-compilation-impl"))
-    commonCompileOnly(project(":daemon-common"))
-    commonCompileOnly(project(":kotlin-daemon-client"))
+    for (compilerRuntimeDependency in unpublishedCompilerRuntimeDependencies) {
+        commonCompileOnly(project(compilerRuntimeDependency)) { isTransitive = false }
+    }
+    commonCompileOnly(libs.guava)
+    commonCompileOnly(project(":daemon-common")) {
+        isTransitive = false
+    }
+    commonCompileOnly(project(":kotlin-daemon-client")) {
+        isTransitive = false
+    }
     commonCompileOnly(project(":kotlin-gradle-compiler-types"))
-    commonCompileOnly(project(":kotlin-android-extensions"))
-    commonCompileOnly(project(":kotlin-compiler-runner-unshaded"))
-    commonCompileOnly(project(":kotlin-annotation-processing"))
-    commonCompileOnly(project(":kotlin-scripting-compiler"))
+    commonCompileOnly(project(":kotlin-compiler-runner-unshaded")) {
+        isTransitive = false
+    }
     commonCompileOnly(project(":kotlin-gradle-statistics"))
     commonCompileOnly(project(":kotlin-gradle-build-metrics"))
-    commonCompileOnly("com.android.tools.build:gradle:4.2.2") {
-        exclude("org.ow2.asm")
-        exclude("net.sf.proguard")
-        exclude("net.sf.jopt-simple")
-        exclude("com.squareup")
-        exclude("com.google.crypto.tink")
-        exclude("com.google.guava")
-        exclude("com.google.protobuf")
-        exclude("com.google.testing.platform")
-        exclude("com.android.tools.lint")
-        exclude("androidx.databinding")
-        exclude("com.android.tools.analytics-library")
-        exclude("com.android.tools.build.jetifier")
-        exclude("com.android.tools.build", "transform-api")
-        exclude("com.android.tools.build", "builder-test-api")
-        exclude("com.android.tools.build", "bundletool")
-        exclude("com.android.tools.build", "aaptcompiler")
-        exclude("com.android.tools.build", "aapt2-proto")
+    commonCompileOnly(project(":compiler:build-tools:kotlin-build-tools-jdk-utils"))
+    commonCompileOnly(libs.android.gradle.plugin.gradle.api) { isTransitive = false }
+    commonCompileOnly(libs.android.gradle.plugin.gradle) { isTransitive = false }
+    commonCompileOnly(libs.android.gradle.plugin.builder) { isTransitive = false }
+    commonCompileOnly(libs.android.gradle.plugin.builder.model) { isTransitive = false }
+    commonCompileOnly(libs.android.tools.common) { isTransitive = false }
+    commonCompileOnly(intellijPlatformUtil()) { // TODO: remove in KT-70252
+        isTransitive = false
     }
-    commonCompileOnly(intellijCore())
+    commonCompileOnly(intellijUtilRt()) { // TODO: remove in KT-70252
+        isTransitive = false
+    }
     commonCompileOnly(commonDependency("org.jetbrains.teamcity:serviceMessages"))
-    commonCompileOnly("com.gradle:gradle-enterprise-gradle-plugin:3.12.4")
+    commonCompileOnly(libs.develocity.gradlePlugin)
     commonCompileOnly(commonDependency("com.google.code.gson:gson"))
-    commonCompileOnly("de.undercouch:gradle-download-task:4.1.1")
     commonCompileOnly("com.github.gundy:semver4j:0.16.4:nodeps") {
         exclude(group = "*")
     }
     commonCompileOnly(project(":kotlin-tooling-metadata"))
     commonCompileOnly(project(":compiler:build-tools:kotlin-build-statistics"))
-
+    commonCompileOnly(project(":native:swift:swift-export-standalone"))
+    commonCompileOnly(libs.intellij.asm) { isTransitive = false }
 
     commonImplementation(project(":kotlin-gradle-plugin-idea"))
     commonImplementation(project(":kotlin-gradle-plugin-idea-proto"))
-    commonImplementation(project(":kotlin-util-klib"))
-    commonImplementation(project(":native:kotlin-klib-commonizer-api"))
-    commonImplementation(project(":compiler:build-tools:kotlin-build-tools-api"))
+    commonImplementation(project(":native:kotlin-klib-commonizer-api")) // TODO: consider removing in KT-70247
 
-    commonRuntimeOnly(project(":kotlin-compiler-embeddable"))
-    commonRuntimeOnly(project(":kotlin-android-extensions"))
-    commonRuntimeOnly(project(":kotlin-compiler-runner")) {
-        // Excluding dependency with not-relocated 'com.intellij' types
-        exclude(group = "org.jetbrains.kotlin", module = "kotlin-build-common")
+    commonImplementation(project(":compiler:build-tools:kotlin-build-statistics"))
+    commonImplementation(project(":kotlin-util-klib-metadata")) // TODO: consider removing in KT-70247
+
+    commonRuntimeOnly(project(":kotlin-compiler-runner")) { // TODO: consider removing in KT-70247
+        exclude(group = "org.jetbrains.kotlin", module = "kotlin-compiler-embeddable")
     }
-    commonRuntimeOnly(project(":kotlin-scripting-compiler-embeddable"))
-    commonRuntimeOnly(project(":kotlin-scripting-compiler-impl-embeddable"))
+    for (compilerRuntimeDependency in unpublishedCompilerRuntimeDependencies) {
+        embedded(project(compilerRuntimeDependency)) { isTransitive = false }
+    }
 
     embedded(project(":kotlin-gradle-build-metrics"))
     embedded(project(":kotlin-gradle-statistics"))
-    embedded(commonDependency("org.jetbrains.intellij.deps:asm-all")) { isTransitive = false }
+    embedded(libs.intellij.asm) { isTransitive = false }
     embedded(commonDependency("com.google.code.gson:gson")) { isTransitive = false }
-    embedded(commonDependency("com.google.guava:guava")) { isTransitive = false }
+    embedded(libs.guava) { isTransitive = false }
+    embedded(libs.guava.failureaccess) { isTransitive = false }
     embedded(commonDependency("org.jetbrains.teamcity:serviceMessages")) { isTransitive = false }
     embedded(project(":kotlin-tooling-metadata")) { isTransitive = false }
-    embedded("de.undercouch:gradle-download-task:4.1.1")
     embedded("com.github.gundy:semver4j:0.16.4:nodeps") {
         exclude(group = "*")
     }
 
+    commonCompileOnly(libs.apache.commons.compress)
+    embedded(libs.apache.commons.compress)
+
     if (!kotlinBuildProperties.isInJpsBuildIdeaSync) {
         // Adding workaround KT-57317 for Gradle versions where Kotlin runtime <1.8.0
         "mainEmbedded"(project(":kotlin-build-tools-enum-compat"))
-        "gradle70Embedded"(project(":kotlin-build-tools-enum-compat"))
-        "gradle71Embedded"(project(":kotlin-build-tools-enum-compat"))
-        "gradle74Embedded"(project(":kotlin-build-tools-enum-compat"))
-        "gradle75Embedded"(project(":kotlin-build-tools-enum-compat"))
-        "gradle76Embedded"(project(":kotlin-build-tools-enum-compat"))
     }
 
     testCompileOnly(project(":compiler"))
@@ -139,18 +198,84 @@ dependencies {
 
     testImplementation(commonDependency("org.jetbrains.teamcity:serviceMessages"))
     testImplementation(projectTests(":kotlin-build-common"))
-    testImplementation(project(":kotlin-android-extensions"))
     testImplementation(project(":kotlin-compiler-runner"))
-    testImplementation(project(":kotlin-test:kotlin-test-junit"))
-    testImplementation(commonDependency("junit:junit"))
+    testImplementation(kotlinTest("junit"))
+    testImplementation(libs.junit4)
     testImplementation(project(":kotlin-gradle-statistics"))
     testImplementation(project(":kotlin-tooling-metadata"))
+    testImplementation(libs.lincheck)
 }
 
 configurations.commonCompileClasspath.get().exclude("org.jetbrains.kotlinx", "kotlinx-coroutines-core")
 
 if (kotlinBuildProperties.isInJpsBuildIdeaSync) {
     configurations.commonApi.get().exclude("com.android.tools.external.com-intellij", "intellij-core")
+}
+
+/**
+ * Security Advisory: Vulnerable Transitive Dependencies
+ *
+ * The dependency com.android.tools.build:gradle:8.7.2 introduces several transitive
+ * dependencies with known security vulnerabilities. The following configuration
+ * enforces safer versions of these dependencies.
+ *
+ * Affected Libraries:
+ * ├── com.google.protobuf
+ * │   ├── protobuf-java:* → 3.25.5
+ * │   └── protobuf-java-util:3.22.3
+ * ├── io.netty
+ * │   ├── netty-buffer:*
+ * │   ├── netty-codec-http:* → 4.1.115.Final
+ * │   ├── netty-codec-http2:* → 4.1.115.Final
+ * │   ├── netty-common:* → 4.1.115.Final
+ * │   └── netty-handler:* → 4.1.115.Final
+ * ├── org.apache.commons
+ * │   ├── commons-compress:* → 1.27.1
+ * │   └── commons-io:* → 2.16.1
+ * └── org.bouncycastle:bcpkix-jdk18on:* → 1.79
+ *
+ * Mitigated Vulnerabilities:
+ * 1. Google Protobuf
+ *    - CVE-2024-7254: Potential security vulnerability
+ *
+ * 2. Netty Components
+ *    - CVE-2024-47535: Network security vulnerability
+ *    - CVE-2024-29025: Remote code execution risk
+ *    - CVE-2023-4586: Information disclosure vulnerability
+ *    - CVE-2023-34462: Potential denial of service
+ *
+ * 3. Bouncy Castle
+ *    - CVE-2024-34447: Cryptographic security issue
+ *    - CVE-2024-30172: Potential encryption vulnerability
+ *    - CVE-2024-30171: Security protocol weakness
+ *    - CVE-2024-29857: Cryptographic implementation flaw
+ */
+configurations.all {
+    resolutionStrategy.eachDependency {
+        // Google Protobuf
+        if (requested.group == "com.google.protobuf" && requested.name == "protobuf-java") {
+            useVersion("3.25.5")
+            because("CVE-2024-7254")
+        }
+
+        // Netty Components
+        if (requested.group == "io.netty" &&
+            listOf(
+                "netty-buffer",
+                "netty-codec-http2",
+                "netty-handler-proxy",
+            ).contains(requested.name)
+        ) {
+            useVersion("4.1.115.Final")
+            because("CVE-2024-47535, CVE-2024-29025, CVE-2023-4586, CVE-2023-34462")
+        }
+
+        // Bouncy Castle
+        if (requested.group == "org.bouncycastle" && requested.name == "bcpkix-jdk18on") {
+            useVersion("1.79")
+            because("CVE-2024-34447, CVE-2024-30172, CVE-2024-30171, CVE-2024-29857")
+        }
+    }
 }
 
 tasks {
@@ -167,26 +292,123 @@ tasks {
         }
     }
 
-    withType<ValidatePlugins>().configureEach {
-        failOnWarning.set(true)
-        enableStricterValidation.set(true)
-    }
-
     withType<ShadowJar>().configureEach {
         relocate("com.github.gundy", "$kotlinEmbeddableRootPackage.com.github.gundy")
-        relocate("de.undercouch.gradle.tasks.download", "$kotlinEmbeddableRootPackage.de.undercouch.gradle.tasks.download")
-
-        // don't expose external Gradle plugin marker
-        // workaround from https://github.com/johnrengelman/shadow/issues/505#issuecomment-644098082
-        transform(DontIncludeResourceTransformer::class.java) {
-            resource = "META-INF/gradle-plugins/de.undercouch.download.properties"
+        val baseSourcePackage = "org.jetbrains.kotlin"
+        val baseTargetPackage = "org.jetbrains.kotlin.gradle.internal"
+        val packages: Map<String, List<String>> = mapOf(
+            "analyzer" to emptyList(),
+            "build" to listOf(
+                "org.jetbrains.kotlin.build.report.**",
+            ),
+            "builtins" to emptyList(),
+            "config" to listOf(
+                "org.jetbrains.kotlin.config.ApiVersion**", // used a lot in buildscripts
+                "org.jetbrains.kotlin.config.JvmTarget**", // used a lot in buildscripts
+                "org.jetbrains.kotlin.config.KotlinCompilerVersion", // used a lot in buildscripts
+                "org.jetbrains.kotlin.config.Services**", // required to initialize `CompilerEnvironment`
+            ),
+            "constant" to emptyList(),
+            "container" to emptyList(),
+            "contracts" to emptyList(),
+            "descriptors" to emptyList(),
+            "extensions" to emptyList(),
+            "idea" to emptyList(),
+            "ir" to emptyList(),
+            "kapt3.diagnostic" to emptyList(),
+            "load" to emptyList(),
+            "metadata" to emptyList(),
+            "modules" to emptyList(),
+            "mpp" to emptyList(),
+            "name" to emptyList(),
+            "platform" to emptyList(),
+            "progress" to emptyList(),
+            "renderer" to emptyList(),
+            "resolve" to emptyList(),
+            "serialization" to emptyList(),
+            "storage" to emptyList(),
+            "types" to emptyList(),
+            "type" to emptyList(),
+            "utils" to emptyList(),
+            "util" to listOf(
+                "org.jetbrains.kotlin.util.Logger", // symbol from a standalone published artifact, don't relocate usages
+                "org.jetbrains.kotlin.util.UtilKt", // class from kotlin-util-io which is a transitive API dependency of KGP-API, don't relocate usages
+                "org.jetbrains.kotlin.util.capitalizeDecapitalize.CapitalizeDecapitalizeKt", // used in standalone published artifacts that the plugin depends on
+            ),
+        )
+        packages.forEach { (pkg, exclusions) ->
+            relocate("$baseSourcePackage.$pkg.", "$baseTargetPackage.$pkg.") {
+                exclusions.forEach { exclude(it) }
+            }
+        }
+        transform(KotlinModuleMetadataVersionBasedSkippingTransformer::class.java) {
+            /*
+             * This excludes .kotlin_module files for compiler modules from the fat jars.
+             * These files are required only at compilation time, but we include the modules only for runtime
+             * Hack for not limiting LV to 1.5 for those modules. To be removed after KT-70247
+             */
+            pivotVersion = KotlinMetadataPivotVersion(1, 6, 0)
+        }
+        asmDeprecation {
+            val exclusions = listOf(
+                "org.jetbrains.kotlin.gradle.**", // part of the plugin
+                "org.jetbrains.kotlin.project.model.**", // part of the plugin
+                "org.jetbrains.kotlin.statistics.**", // part of the plugin
+                "org.jetbrains.kotlin.tooling.**", // part of the plugin
+                "org.jetbrains.kotlin.org.**", // already shadowed dependencies
+                "org.jetbrains.kotlin.com.**", // already shadowed dependencies
+                "org.jetbrains.kotlin.it.unimi.**", // already shadowed dependencies
+                "org.jetbrains.kotlin.internal.**", // already internal package
+            )
+            val deprecationMessage = """
+                You're using a Kotlin compiler class bundled into KGP for its internal needs.
+                This is discouraged and will not be supported in future releases.
+                The class in this artifact is scheduled for removal in Kotlin 2.2. Please define dependency on it in an alternative way.
+                See https://kotl.in/gradle/internal-compiler-symbols for more details
+            """.trimIndent()
+            deprecateClassesByPattern("org.jetbrains.kotlin.**", deprecationMessage, exclusions)
+        }
+    }
+    GradlePluginVariant.values().forEach { variant ->
+        if (kotlinBuildProperties.isInJpsBuildIdeaSync) return@forEach
+        val sourceSet = sourceSets.getByName(variant.sourceSetName)
+        val taskSuffix = sourceSet.jarTaskName.capitalize()
+        val shadowJarTaskName = "$EMBEDDABLE_COMPILER_TASK_NAME$taskSuffix"
+        asmDeprecation {
+            val dumpTask = registerDumpDeprecationsTask(shadowJarTaskName, taskSuffix)
+            val dumpAllTask = getOrCreateTask<Task>("dumpDeprecations") {
+                dependsOn(dumpTask)
+            }
+            val expectedFileDoesNotExistMessage = """
+                The file with expected deprecations for the compiler modules bundled into KGP does not exist.
+                Run ./gradlew ${project.path}:${dumpTask.name} first to create it.
+                You may also use ./gradlew ${project.path}:${dumpAllTask.name} to dump deprecations of all fat jars.
+                Context: https://youtrack.jetbrains.com/issue/KT-70251
+            """.trimIndent()
+            val checkFailureMessage = """
+                Expected deprecations applied to the compiler modules bundled into KGP does not match with the actually applied ones.
+                Run ./gradlew ${project.path}:${dumpTask.name} to see the difference.
+                You may also use ./gradlew ${project.path}:${dumpAllTask.name} to dump deprecations of all fat jars.
+                Use INFO level log for the exact deprecated classes set.
+                Either commit the difference or adjust the package relocation rules in ${buildFile.absolutePath}
+                Please be sure to leave a comment explaining any changes related to this failure clear enough.
+                Context: https://youtrack.jetbrains.com/issue/KT-70251
+            """.trimIndent()
+            val checkTask =
+                registerCheckDeprecationsTask(shadowJarTaskName, taskSuffix, expectedFileDoesNotExistMessage, checkFailureMessage)
+            named("check") {
+                dependsOn(checkTask)
+            }
         }
     }
 }
 
-projectTest {
-    dependsOn(tasks.named("validatePlugins"))
+tasks.named("validatePlugins") {
+    // We're manually registering and wiring validation tasks for each plugin variant
+    enabled = false
+}
 
+projectTest {
     workingDir = rootDir
 }
 
@@ -246,41 +468,49 @@ gradlePlugin {
             displayName = description
             implementationClass = "org.jetbrains.kotlin.gradle.plugin.cocoapods.KotlinCocoapodsPlugin"
         }
-        create("kotlinMultiplatformPluginPm20") {
-            id = "org.jetbrains.kotlin.multiplatform.pm20"
-            description = "Kotlin Multiplatform plugin with PM2.0"
-            displayName = description
-            implementationClass = "org.jetbrains.kotlin.gradle.plugin.KotlinPm20PluginWrapper"
-        }
     }
 }
 
 // Gradle plugins functional tests
 if (!kotlinBuildProperties.isInJpsBuildIdeaSync) {
 
+    val gradlePluginVariantForFunctionalTests = GradlePluginVariant.GRADLE_85
     val functionalTestSourceSet = sourceSets.create("functionalTest") {
-        compileClasspath += mainSourceSet.output
-        runtimeClasspath += mainSourceSet.output
+        val gradlePluginVariantSourceSet = sourceSets.getByName(gradlePluginVariantForFunctionalTests.sourceSetName)
+        compileClasspath += gradlePluginVariantSourceSet.output
+        runtimeClasspath += gradlePluginVariantSourceSet.output
 
         configurations.getByName(implementationConfigurationName) {
-            extendsFrom(configurations.getByName(mainSourceSet.implementationConfigurationName))
+            extendsFrom(configurations.getByName(gradlePluginVariantSourceSet.implementationConfigurationName))
             extendsFrom(configurations.getByName(testSourceSet.implementationConfigurationName))
         }
 
         configurations.getByName(runtimeOnlyConfigurationName) {
-            extendsFrom(configurations.getByName(mainSourceSet.runtimeOnlyConfigurationName))
+            extendsFrom(configurations.getByName(gradlePluginVariantSourceSet.runtimeOnlyConfigurationName))
             extendsFrom(configurations.getByName(testSourceSet.runtimeOnlyConfigurationName))
         }
     }
 
     val functionalTestCompilation = kotlin.target.compilations.getByName("functionalTest")
-    functionalTestCompilation.associateWith(kotlin.target.compilations.getByName("main"))
+    functionalTestCompilation.compileJavaTaskProvider.configure {
+        sourceCompatibility = JavaLanguageVersion.of(17).toString()
+        targetCompatibility = JavaLanguageVersion.of(17).toString()
+    }
+    functionalTestCompilation.compileTaskProvider.configure {
+        with(this as KotlinCompile) {
+            kotlinJavaToolchain.toolchain.use(project.getToolchainLauncherFor(JdkMajorVersion.JDK_17_0))
+        }
+    }
+    functionalTestCompilation.associateWith(kotlin.target.compilations.getByName(gradlePluginVariantForFunctionalTests.sourceSetName))
     functionalTestCompilation.associateWith(kotlin.target.compilations.getByName("common"))
 
-    tasks.register<Test>("functionalTest")
+    tasks.register<Test>("functionalTest") {
+        systemProperty("kotlinVersion", rootProject.extra["kotlinVersion"] as String)
+    }
 
     tasks.register<Test>("functionalUnitTest") {
         include("**/org/jetbrains/kotlin/gradle/unitTests/**")
+        systemProperty("kotlinVersion", rootProject.extra["kotlinVersion"] as String)
     }
 
     tasks.register<Test>("functionalRegressionTest") {
@@ -289,6 +519,10 @@ if (!kotlinBuildProperties.isInJpsBuildIdeaSync) {
 
     tasks.register<Test>("functionalDependencyResolutionTest") {
         include("**/org/jetbrains/kotlin/gradle/dependencyResolutionTests/**")
+    }
+
+    val acceptLicensesTask = with(androidSdkProvisioner) {
+        registerAcceptLicensesTask()
     }
 
     tasks.withType<Test>().configureEach {
@@ -300,12 +534,15 @@ if (!kotlinBuildProperties.isInJpsBuildIdeaSync) {
         classpath = functionalTestSourceSet.runtimeClasspath
         workingDir = projectDir
         javaLauncher.set(javaToolchains.launcherFor {
-            languageVersion.set(JavaLanguageVersion.of(11))
+            languageVersion.set(JavaLanguageVersion.of(17))
         })
         dependsOnKotlinGradlePluginInstall()
-        useAndroidSdk()
-        doFirst { acceptAndroidSdkLicenses() }
+        androidSdkProvisioner {
+            provideToThisTaskAsSystemProperty(ProvisioningType.SDK)
+            dependsOn(acceptLicensesTask)
+        }
         maxParallelForks = 8
+        maxHeapSize = "4G" // KT-72460 to investigate why we need to change heap size
 
         testLogging {
             events("passed", "skipped", "failed")
@@ -316,21 +553,22 @@ if (!kotlinBuildProperties.isInJpsBuildIdeaSync) {
         val implementation = project.configurations.getByName(functionalTestSourceSet.implementationConfigurationName)
         val compileOnly = project.configurations.getByName(functionalTestSourceSet.compileOnlyConfigurationName)
 
-        implementation("com.android.tools.build:gradle:7.2.1")
-        implementation("com.android.tools.build:gradle-api:7.2.1")
-        compileOnly("com.android.tools:common:30.2.1")
+        implementation("com.android.tools.build:gradle:8.7.2")
+        implementation("com.android.tools.build:gradle-api:8.7.2")
+        compileOnly("com.android.tools:common:31.7.2")
         implementation(gradleKotlinDsl())
-        implementation(project(":kotlin-gradle-plugin-kpm-android"))
         implementation(project(":kotlin-gradle-plugin-tcs-android"))
         implementation(project(":kotlin-tooling-metadata"))
         implementation(project.dependencies.testFixtures(project(":kotlin-gradle-plugin-idea")))
         implementation("com.github.gundy:semver4j:0.16.4:nodeps") {
-            (this as ExternalModuleDependency).exclude(group = "*")
+            exclude(group = "*")
         }
         implementation("org.reflections:reflections:0.10.2")
+        implementation(project(":compose-compiler-gradle-plugin"))
     }
 
     tasks.named("check") {
         dependsOn("functionalTest")
+        dependsOn("lincheckTest")
     }
 }
